<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://shemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_guarda"
        android:orderInCategory="100"
        android:title="@string/guarda"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_modifica"
        android:orderInCategory="100"
        android:title="@string/modifica"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_elimina"
        android:orderInCategory="100"
        android:title="@string/elimina"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_limpia"
        android:orderInCategory="100"
        android:title="@string/limpia"
        app:showAsAction="never" />

</menu>