<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_height="match_parent"
    >


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="57dp">

        <EditText
            android:id="@+id/materia"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/materia"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/salon"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="3"
            android:hint="@string/salon"
            android:inputType="number" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/horarioentrada"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/horarioentrada"
            android:inputType="number" />

        <EditText
            android:id="@+id/horariosalida"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/horariosalida"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="57dp">
        <Spinner
            android:id="@+id/dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/valores_array"></Spinner>


        <Spinner
            android:id="@+id/edificio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/valores_arrays"></Spinner>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txtdia"
            android:layout_width="104dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtedificio"
            android:layout_width="102dp"
            android:layout_height="wrap_content" />


    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:textSize="30dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Horario" />

    <ListView
        android:id="@+id/lv_datosPersonas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>